crates/ruff_python_parser/tests/snapshots/valid_syntax@decorator_async_function.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/decorator_async_function.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..32,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..31,
                    is_async: true,
                    decorator_list: [
                        Decorator {
                            range: 0..10,
                            node_index: NodeIndex(None),
                            expression: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 1..10,
                                    id: Name("decorator"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ],
                    name: FunctionDefName {
                        name: Identifier {
                            id: Name("foo"),
                            range: 21..24,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                        type_params: None,
                    },
                    parameters: Parameters {
                        range: 24..26,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 28..31,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 28..31,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
